...
    Restaurant(
        name: "No Bones",
        location: Restaurant.Location(name: "Byron Bay", latitude: -28.64450290000002, longitude: 153.61251070000014),
        notes: "Relaxed diner cooking dairy-free vegetarian Asian meals with protein made from soy, wheat and yam.",
        image: "https://b.zmtcdn.com/data/pictures/3/16613723/9b9881e30341b28cff78e66f83acc12f.jpg",
        review: [Review(reviewer: "Max", comment: "Really enjoyed this place"), Review(reviewer: "Harry", comment: "Pretty cool I guess...")]    )
], navigationTitleString: "Favourite Eateries")

